examples/test/testpolicy12128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12128
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key36: value6
      key18: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value11
          key30: value27
          key5: value24
      podSelector:
        matchLabels:
          key38: value26
